--- a/src/main/resources/public/EmpQuery.html
+++ b/src/main/resources/public/EmpQuery.html
@@ -2,9 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>查询页面</title>
 </head>
 <body>
+<script src="js/jquery-3.2.1.js" type="text/javascript"></script>
+<button type="button" onclick="add()">添加</button>
+<table border="1px solid black" cellspacing="0">
+    <thead>
+    <tr>
+        <th>员工编号</th>
+        <th>员工姓名</th>
+        <th>职位</th>
+        <th>工资</th>
+        <th>奖金</th>
+        <th>上司</th>
+        <th>部门编号</th>
+        <th>日期</th>
+        <th>操作</th>
+    </tr>
+    </thead>
+    <tbody id="List">
 
+    </tbody>
+</table>
+<script>
+    $(()=>{
+        $.ajax({
+            url:"queryAll",
+            type:"post",
+            dataType:"json",
+            success:function (data) {
+                console.log(data)
+                var temp = "";
+                $.each(data,function (index,obj) {
+                    temp+=" <tr>"+
+                        "<th>"+obj.empno+"</th>"+
+                        "<th>"+obj.ename+"</th>"+
+                        "<th>"+obj.job+"</th>"+
+                        "<th>"+obj.sal+"</th>"+
+                        "<th>"+obj.comm+"</th>"+
+                        "<th>"+obj.mgr+"</th>"+
+                        "<th>"+obj.deptno+"</th>"+
+                        "<th>"+obj.hiredate+"</th>"+
+                        "<th><button onclick='upd("+obj.empno+")'>修改</button><button onclick='del("+obj.empno+")'>删除</button></th>"+
+                        "</tr>";
+                })
+                $("#List").html(temp);
+            }
+        })
+    })
+
+    function upd(empno) {
+        localStorage.setItem("empno",empno);
+        location.href="EmpAdd.html";
+    }
+    function add() {
+        localStorage.setItem("empno","");
+        location.href="EmpAdd.html";
+    }
+    function del(empno) {
+        $.ajax({
+            type:"post",
+            url:"delete",
+            data:{"empno":empno},
+            dataType:"json",
+            success:function (data) {
+                if (data=1){
+                    alert("删除成功")
+                    location.reload();
+                }
+            }
+        })
+    }
+</script>
 </body>
 </html>
